tests/paczka1/small_fuzzy/70235811.err
Error in line 2: WWXkt A28 21,7
Error in line 1: XxAxCv S893 63,9
